force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Plan__c/fields/agf__BugList__c.field-meta.xml
<CustomField>
    <fullName>agf__BugList__c</fullName>
    <description>All features should have either a Feature Request Bug/Work record or a Bug List to track bugs.  Please enter the URL to this Record</description>
    <inlineHelpText>All features should  have either a Feature Request Bug/Work record or a Bug List to track bugs.  Please enter the URL to this Record</inlineHelpText>
    <label>Bug List</label>
    <type>Url</type>
</CustomField>