force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Plan__c/fields/agf__Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Description__c</fullName>
    <description>Brief Description about Test Plan</description>
    <inlineHelpText>Please enter the Brief Description of the Test Plan.</inlineHelpText>
    <label>Brief Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>