force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Plan__c/fields/agf__Functional_Specification__c.field-meta.xml
<CustomField>
    <fullName>agf__Functional_Specification__c</fullName>
    <description>Url to the functional specification, if one exists</description>
    <inlineHelpText>Url to the functional specification, if one exists</inlineHelpText>
    <label>Functional Specification</label>
    <type>Url</type>
</CustomField>