force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Plan__c/fields/agf__Scope__c.field-meta.xml
<CustomField>
    <fullName>agf__Scope__c</fullName>
    <description>Scope of the TestPlan</description>
    <inlineHelpText>Please enter the Scope of the Test Plan</inlineHelpText>
    <label>Scope</label>
    <type>TextArea</type>
</CustomField>