force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Plan__c/fields/agf__Test_Strategy__c.field-meta.xml
<CustomField>
    <fullName>agf__Test_Strategy__c</fullName>
    <inlineHelpText>Your test strategy should at a minimum cover what you will be testing, what you won&apos;t be testing, and what you understand the major risk areas to be.</inlineHelpText>
    <label>Test Strategy</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>